updating and finalizing tests

--- a/app/views/conversions/home.html.erb
+++ b/app/views/conversions/home.html.erb
@@ -3,3 +3,6 @@
 
 <h1>Convert Your USD to Euro</h1>
 <p>From any date within the last <%= (todays_date - start_date).to_i %> days!</p>
+
+
+<h4> FEATURE COMING SOON </h4>
